<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewDisplayamount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editInputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:inputType="phone" />

    <TextView
        android:id="@+id/TextViewDisplayPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numPax" />

    <EditText
        android:id="@+id/editInputNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:checked="true"
            android:textOff="@string/svsDisabled"
            android:textOn="@string/svsEnabled" />

        <ToggleButton
            android:id="@+id/tbGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:checked="true"
            android:textOff="@string/gstDisabled"
            android:textOn="@string/gstEnabled" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/editInputDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <RadioGroup
            android:id="@+id/RadioGroupMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/radioButtonPayNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_now" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/split" />

        <ToggleButton
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTotalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textEachPays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pay"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>